2004-03-16  Glynn Foster  <glynn.foster@sun.com>

	* configure.in: Add l10n'd docs to the build. Still missing 
	some ja updates, but have pinged emerald@gnome.gr.org before
	I stamp all over his docs with a sun mark.

2004-03-15  Glynn Foster  <glynn.foster@sun.com>

	* docs/*: Remove top level crap that we don't need anymore.

2004-03-14  Kevin Vandersloot <kfv101 psu edu>

	* configure.in: release 2.5.8

2004-03-10  Kevin Vandersloot <kfv101 psu edu>

	* configure.in: release 2.5.7

2004-03-07  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.in: check for GStreamer 0.8 and 0.7

2004-03-05  Paisa Seeluangsawat  <paisa@users.sf.net>

	* configure.in: Added "th" (Thai) to ALL_LINGUAS.

2004-02-22  Kevin Vandersloot

	* configure.in: reelase 2.5.6

2004-02-21  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "en_CA" to ALL_LINGUAS.

2004-02-18  Kevin Vandersloot

	* configure.in: More  BSD support from Julio M. Merino Vidal.

2004-02-17  Kevin Vandersloot

	* configure.in: fix compilation on Net BSD. Fixes bug #134654. Patch from
	Julio M. Merino Vidal.

2004-02-10  Jason Leach  <leach@wam.umd.edu>

	* configure.in: Removed the --disable-install-schemas arg (whose
	conditional is not being used anywhere), because there is already
	a --disable-schemas-install from gconf.m4's AM_GCONF_SOURCE_2
	macro.

2004-02-06  Dennis Cranston <dennis_cranston at yahoo com>

	Fix for bug 133605.
	* gswitchit/gswitchit-applet.c:
	(GSwitchItAppletInit): Set PANEL_APPLET_EXPAND_MINOR.
	
2004-02-06  Padraig O'Briain (padraig.obriain@sun.com)

	* gswitchit/gswitchit-applet.c (GSwitchItAppletFilterXEvt):
	Return GDK_FILTER_CONTINUE for ReparentNotify event so that
	gtk_plug_filter_func gets the events. Fixes bug #132851.

2004-02-05  Dennis Smit  <ds@nerds-incorporated.org>
	
	* configure.in: Install the docs for multiload.

2004-02-03  Alexander Winston  <alexander.winston@comcast.net>

	* acinclude.m4: Quoted definition of macro AM_PATH_ESD. Fixes