@@ -1,6 +1,0 @@
-figs =
-applet = 
-lang = C
-sgml_ents = $(applet).sgml
-include $(top_srcdir)/applet-docs.make
-dist-hook: applet-dist-hook
