@@ -1,3 +1,0 @@
-Makefile.in
-Makefile
-*.omf
