@@ -1,3 +1,9 @@
+2004-03-17  Glynn Foster  <glynn.foster@sun.com>
+
+	* applet-docs.am.template, applet-docs.make,
+	* omf-install/Makefile.am, sgmldocs.make: Remove more legacy
+	doc stuff. We should be clear of it now.
+
 2004-03-16  Glynn Foster  <glynn.foster@sun.com>
 
 	* configure.in: Add l10n'd docs to the build. Still missing 
